--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "EleventyOne",
+  "name": "ridodev",
   "version": "2.0.0",
-  "description": "A project bootstrap for Eleventy sites. With pipelines for Sass, Js, and Lambdas",
-  "author": "Phil Hawksworth",
+  "description": "Rido Site",
+  "author": "rido",
   "license": "MIT",
   "scripts": {
     "start": "yarn run dev",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/philhawksworth/eleventyone"
+    "url": "https://github.com/ridomin/wwwridodev"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.7.1",
